# customizer

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODOS.md  USAGE.md  customize  package-lock.json  package.json  pyproject.toml  state-update-summary.md  state.md  template-customizer.spec  test-config.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
.github/workflows/: ci.yml  test.yml
docker/: .dockerignore  Dockerfile
docs/: CONFIGURATION_BEST_PRACTICES.md  DEVELOPMENT.md  DOCKER.md  LIMITATIONS.md  MIGRATION.md  TROUBLESHOOTING.md  USAGE.md  ai-agents.md
examples/: config.yml
examples/configurations/: README.md  basic-example.yml  docker-compose-config.yml  kubernetes-config.yml  microservice-config.yml
examples/test-project/: advanced.py  app.js  config.py  config.yml  docker-compose.yml  package.json  styles.css
scripts/: README.md  build-native.sh  docker-build.sh  docker-publish.sh  docker-run.sh  get-version.py  install.sh  release-automation.py  run-docker-customizer.template
src/template_customizer/: __init__.py  __main__.py  cli.py
src/template_customizer/core/: __init__.py  exceptions.py  external_replacements.py  parser.py  processor.py  resolver.py  scanner.py  writer.py
src/template_customizer/core/replacers/: __init__.py  json_replacer.py  markdown_replacer.py
src/template_customizer/utils/: __init__.py  file_types.py  validation.py  version.py  version_bump.py
test-native/: config.py
tests/: __init__.py  conftest.py  test_basic.py  test_cli_enhancements.py  test_comment_parser.py  test_config_resolver.py  test_external_replacements.py  test_file_types.py  test_phase2_integration.py  test_phase4_integration.py  test_resolver_integration.py  test_version_management.py
