[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "template-customizer"
dynamic = ["version"]
description = "A tool for customizing project templates using comment-based markers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Template Customizer", email = "noreply@example.com"},
]
keywords = ["template", "customizer", "jinja2", "project-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
template-customizer = "template_customizer.cli:main"

[project.urls]
Homepage = "https://github.com/example/template-customizer"
Repository = "https://github.com/example/template-customizer"
Issues = "https://github.com/example/template-customizer/issues"

[tool.hatch.version]
path = "src/template_customizer/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/template_customizer"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "template_customizer.core.parser",
    "template_customizer.core.writer"
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]